<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="load_app">LoadApp</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="please_select_file_to_download">Please select file to download</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by Bump Tech</string>
    <string name="load_app_current_repository">Load app - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="check_download_status">Check the status</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
</resources>
