<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/text_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/file_name"
        android:textSize="18sp"
         />

    <TextView
        android:id="@+id/text_repository_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_file_name"
        app:layout_constraintTop_toTopOf="@+id/text_file_name"
        tools:text="Glide - Image Loading Library by Bump Tech" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_status_value"
        tools:text="Status" />

    <TextView
        android:id="@+id/text_status_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_status"
        app:layout_constraintTop_toBottomOf="@+id/text_repository_name"
        tools:text="Success" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/colorAccent" />
</androidx.constraintlayout.motion.widget.MotionLayout>