<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/button_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/glide_image_loading_library_by_bumptech"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/button_app_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/load_app_current_repository"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/button_retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/retrofit_type_safe_http_client"
                android:textSize="18sp" />
        </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textSize="20sp"
        app:backgroundColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="1.0"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>